mudanças na pagina de arquivos

--- a/arquivo.html
+++ b/arquivo.html
@@ -9,8 +9,33 @@
     <div id="containerArq">
         <nav id="navArq"></nav>
         <header id="headerArq"></header>
-        <section id="mainArq"></section>
+        <section id="mainArq">
+        <fieldset id="tipoArq">
+            <legend>Selecione o tipo de arquivo:</legend>
+            <input type="checkbox" id="imagens" name="JPG/JPEG/PNG">
+            <label for="imagens">JPG/JPEG/PNG</label>
+
+            <input type="checkbox" id="doc" name="doc">
+            <label for="doc">DOC</label>
+
+            <input type="checkbox" id="pdf" name="pdf">
+            <label for="pdf">PDF</label>
+
+            <input type="checkbox" id="csv" name="csv">
+            <label for="csv">CSV</label>
+        </fieldset>   
+
+       <div id="regrasNome">
+          <h4>Regras de nomenclatura:</h4>
+          <ul>
+            
+          </ul>
+
+       </div>
+
+        </section>
         <footer id="footerArq"></footer>
     </div>
 </body>
+
 </html>
