Finalização do HTML da página Home

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div>
                     <figure>
                         <img src="img/icon.png" alt="placeholder" class="foto_perfil">
-                        <figcaption>Isabel, aluna de Engenharia da Computação</figcaption>
+                        <figcaption>Isabel, aluna de Engenharia de Produção</figcaption>
                     </figure>
                 </div>
                 <div>
@@ -48,9 +48,6 @@
                     envolvendo o uso de <strong>expressões regulares</strong> para buscar requisições específicas em um texto. 
                     Por exemplo, iremos buscar certos padrões e sua quantidade de ocorrências (como quantidade de caracteres especiais) e
                     restringir tipos de arquivo para envio.
-                </p>
-                <p>
-                    
                 </p>
                 <p>
                     As ferramentas utilizadas neste projeto foram: a linguagam de marcação <em>HTML</em>, a linguagem para estilização <em>CSS</em>
