HTML da página de cadastro

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="">Buscar</a>&nbsp;&nbsp;|&nbsp;&nbsp;
             <a href="">Arquivo</a>&nbsp;&nbsp;|&nbsp;&nbsp;
             <a href="">Buscar e Substituir</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-            <a href="">Cadastro</a>
+            <a href="cadastro.html">Cadastro</a>
         </nav>
         <section>
 
