--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>Projeto - Formulário e Requisitos</header>
         <nav>
             <a href="index.html">Home</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-            <a href="">Buscar</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+            <a href="busca.html">Buscar</a>&nbsp;&nbsp;|&nbsp;&nbsp;
             <a href="">Arquivo</a>&nbsp;&nbsp;|&nbsp;&nbsp;
             <a href="">Buscar e Substituir</a>&nbsp;&nbsp;|&nbsp;&nbsp;
             <a href="">Cadastro</a>
