Coloquei um botão que estava faltando

--- a/arquivo.html
+++ b/arquivo.html
@@ -46,6 +46,7 @@
        <fieldset>
             <legend>Arquivo:</legend>
             <input type="text" id="nomeArq" name="nomeArq">
+            <button>...</button>
        </fieldset>
 
         </section>
