oUTRO BOTÃO QUE EU ESQUECI :))

--- a/arquivo.html
+++ b/arquivo.html
@@ -42,12 +42,14 @@
             <li>Tamanho inimo de 8 caracteres e máximo de 15 caracteres</li>
           </ul>
         </div>
-        
-       <fieldset>
-            <legend>Arquivo:</legend>
+        <h4>Arquivo:</h4>
+       <form>
             <input type="text" id="nomeArq" name="nomeArq">
             <button>...</button>
-       </fieldset>
+            <br><br>
+            <button>Limpar</button>
+            <button>Submeter</button>
+       </form>
 
         </section>
         <footer id="footerArq"></footer>
