--- a/busca.html
+++ b/busca.html
@@ -16,7 +16,7 @@
             <a href="busca.html">Buscar</a>&nbsp;&nbsp;|&nbsp;&nbsp;
             <a href="arquivo.html">Arquivo</a>&nbsp;&nbsp;|&nbsp;&nbsp;
             <a href="buscaesubstitui.html">Buscar e Substituir</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-            <a href="">Cadastro</a>
+            <a href="cadastro.html">Cadastro</a>
         </nav>
         <section>
             
