--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <nav>
             <a href="index.html">Home</a>&nbsp;&nbsp;|&nbsp;&nbsp;
             <a href="busca.html">Buscar</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-            <a href="">Arquivo</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-            <a href="">Buscar e Substituir</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+            <a href="arquivo.html">Arquivo</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+            <a href="buscaesubstitui.html">Buscar e Substituir</a>&nbsp;&nbsp;|&nbsp;&nbsp;
             <a href="cadastro.html">Cadastro</a>
         </nav>
         <section>
