criei o arquivo js para a página arquivo.html

--- a/arquivo.html
+++ b/arquivo.html
@@ -47,8 +47,8 @@
             <input type="text" id="nomeArq" name="nomeArq">
             <button>...</button>
             <br><br>
-            <button>Limpar</button>
-            <button>Submeter</button>
+            <button id="btnlimpa">Limpar</button>
+            <button id="btnsubmete">Submeter</button>
        </form>
 
         </section>
