--- a/cadastro.html
+++ b/cadastro.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto 1</title>
 
+    <script src="scripts/cadastro.js"></script>
+
 </head>
 <body>
     <div id="conteudo">
@@ -31,10 +33,10 @@
                     <label for="user">Usuário: </label><input type="text" name="user" id="user">
                     <label for="email">Email: </label><input type="text" name="email" id="email">
                     <label for="senha">Senha: </label><input type="text" name="senha" id="senha">
-                    <label for="senharver">Verificação Senha: </label><input type="text" name="senharver" id="senharver">
+                    <label for="senhaver">Verificação Senha: </label><input type="text" name="senhaver" id="senhaver">
                 </fieldset>
                 <button type="button">Limpar</button>
-                <button type="button">Submeter</button>
+                <button type="button" id="btnCadastroSub">Submeter</button>
             </form>
 
         </section>
