--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto 1</title>
 
-    <link rel="stylesheet" href="stylehome.css">
+    <link rel="stylesheet" href="styles/stylehome.css">
 
 </head>
 <body>
