Criação da função limpar

--- a/cadastro.html
+++ b/cadastro.html
@@ -35,7 +35,7 @@
                     <label for="senha">Senha: </label><input type="text" name="senha" id="senha">
                     <label for="senhaver">Verificação Senha: </label><input type="text" name="senhaver" id="senhaver">
                 </fieldset>
-                <button type="button">Limpar</button>
+                <button type="button" id="btnLimpar">Limpar</button>
                 <button type="button" id="btnCadastroSub">Submeter</button>
             </form>
 
