Funções de verificar nome e CPF

--- a/cadastro.html
+++ b/cadastro.html
@@ -26,14 +26,14 @@
                     <legend>Dados Pessoais: </legend>
                     <label for="nome">Nome: </label><input type="text" name="nome" id="nome">
                     <label for="cpf">CPF: </label><input type="text" name="cpf" id="cpf">
-                    <label for="datanasc">Data Nascimento:</label><input type="text" name="datanasc" id="datanasc">
+                    <label for="datanasc">Data Nascimento:</label><input type="date" name="datanasc" id="datanasc">
                 </fieldset>
                 <fieldset>
                     <legend>Dados do Perfil:</legend>
                     <label for="user">Usuário: </label><input type="text" name="user" id="user">
-                    <label for="email">Email: </label><input type="text" name="email" id="email">
-                    <label for="senha">Senha: </label><input type="text" name="senha" id="senha">
-                    <label for="senhaver">Verificação Senha: </label><input type="text" name="senhaver" id="senhaver">
+                    <label for="email">Email: </label><input type="email" name="email" id="email">
+                    <label for="senha">Senha: </label><input type="password" name="senha" id="senha">
+                    <label for="senhaver">Verificação Senha: </label><input type="password" name="senhaver" id="senhaver">
                 </fieldset>
                 <button type="button" id="btnLimpar">Limpar</button>
                 <button type="button" id="btnCadastroSub">Submeter</button>
