arquivo js e html já estão certinhos :)

--- a/arquivo.html
+++ b/arquivo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Formulario</title>
-    <script src="arquivo.js"></script>
+    <script src="scripts/arquivo.js"></script>
 </head>
 <body>
     <div id="containerArq">
@@ -46,11 +46,11 @@
         
         <h4>Arquivo:</h4>
        <form>
-            <input type="text" id="nomeArq" name="nomeArq">
+            <input type="file" name="arquivo" id="arquivo">
             <input type ="button" value="..." id="btnVerifica">
             <br><br>
             <button id="btnlimpa">Limpar</button>
-            <input type="button" value="submeter" id="submete"
+            <input type="button" value="submeter" id="submete">
        </form>
 
         </section>
