--- a/buscaesub.html
+++ b/buscaesub.html
@@ -15,7 +15,7 @@
             <a href="index.html">Home</a>&nbsp;&nbsp;|&nbsp;&nbsp;
             <a href="busca.html">Buscar</a>&nbsp;&nbsp;|&nbsp;&nbsp;
             <a href="arquivo.html">Arquivo</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-            <a href="buscaesubstitui.html">Buscar e Substituir</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+            <a href="buscaesub.html">Buscar e Substituir</a>&nbsp;&nbsp;|&nbsp;&nbsp;
             <a href="">Cadastro</a>
         </nav>
         <section>
