Arrumação de tudo

--- a/buscaesub.html
+++ b/buscaesub.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto 1</title>
-    <script src="javaBuscaeSubs.js"></script>
+
+    <script src="scripts/buscaesub.js"></script>
 
 </head>
 <body>
