busca html e java finalizados.

--- a/busca.html
+++ b/busca.html
@@ -24,10 +24,10 @@
                 <form>
                     <fieldset>
                     <legend> Selecione o tipo de verificação</legend>
-                    <input type="radio" name="1op" id="esp" >Caracteres Especiais
-                    <input type="radio" name="1op" id="min" >Letras Minúsculas
-                    <input type="radio" name="1op" id="num" >Digitos Númericos
-                    <input type="radio" name="1op" id="mai" >Maiúsculas
+                    <input type="radio" name="1op" value="esp" >Caracteres Especiais
+                    <input type="radio" name="1op" value="min" >Letras Minúsculas
+                    <input type="radio" name="1op" value="num" >Digitos Númericos
+                    <input type="radio" name="1op" value="mai" >Maiúsculas
                     </fieldset>
                     <legend> Escreva seu texto:</legend>
                     <textarea id="texto"></textarea><br/>
