Início Base CSS

--- a/cadastro.html
+++ b/cadastro.html
@@ -6,6 +6,7 @@
     <title>Projeto 1</title>
 
     <script src="scripts/cadastro.js"></script>
+    <link rel="stylesheet" href="styles/stylebase.css">
 
 </head>
 <body>
@@ -13,10 +14,10 @@
 
         <header>Projeto - Formulário e Requisitos</header>
         <nav>
-            <a href="index.html">Home</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-            <a href="busca.html">Buscar</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-            <a href="arquivo.html">Arquivo</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-            <a href="buscaesubstitui.html">Buscar e Substituir</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+            <a href="index.html">Home</a>&nbsp;&nbsp;&starf;&nbsp;&nbsp;
+            <a href="busca.html">Buscar</a>&nbsp;&nbsp;&starf;&nbsp;&nbsp;
+            <a href="arquivo.html">Arquivo</a>&nbsp;&nbsp;&starf;&nbsp;&nbsp;
+            <a href="buscaesubstitui.html">Buscar e Substituir</a>&nbsp;&nbsp;&starf;&nbsp;&nbsp;
             <a href="cadastro.html">Cadastro</a>
         </nav>
         <section>
