CSS base da base

--- a/cadastro.html
+++ b/cadastro.html
@@ -10,43 +10,47 @@
 
 </head>
 <body>
-    <div id="conteudo">
-
-        <header>Projeto - Formulário e Requisitos</header>
-        <nav>
-            <a href="index.html">Home</a>&nbsp;&nbsp;&starf;&nbsp;&nbsp;
-            <a href="busca.html">Buscar</a>&nbsp;&nbsp;&starf;&nbsp;&nbsp;
-            <a href="arquivo.html">Arquivo</a>&nbsp;&nbsp;&starf;&nbsp;&nbsp;
-            <a href="buscaesubstitui.html">Buscar e Substituir</a>&nbsp;&nbsp;&starf;&nbsp;&nbsp;
-            <a href="cadastro.html">Cadastro</a>
-        </nav>
-        <section>
-
-            <form action="" name="cadastro" id="cadastro">
-                <fieldset>
-                    <legend>Dados Pessoais: </legend>
-                    <label for="nome">Nome: </label><input type="text" name="nome" id="nome">
-                    <label for="cpf">CPF: </label><input type="text" name="cpf" id="cpf">
-                    <label for="datanasc">Data Nascimento:</label><input type="date" name="datanasc" id="datanasc">
-                </fieldset>
-                <fieldset>
-                    <legend>Dados do Perfil:</legend>
-                    <label for="user">Usuário: </label><input type="text" name="user" id="user">
-                    <label for="email">Email: </label><input type="email" name="email" id="email">
-                    <label for="senha">Senha: </label><input type="password" name="senha" id="senha">
-                    <label for="senhaver">Verificação Senha: </label><input type="password" name="senhaver" id="senhaver">
-                </fieldset>
-                <button type="button" id="btnLimpar">Limpar</button>
-                <button type="button" id="btnCadastroSub">Submeter</button>
-            </form>
-
-        </section>
-        <footer>
-            Data de início: 13/08 <br/>
-            Desenvolvido para fins educacionais <br/>
-            Projeto TWIST 2024.2
-        </footer>
-
+    <div id="pagina">
+        <div id="pagina_flex">
+            <div id="conteudo">
+                <header>Projeto - Formulário e Requisitos</header>
+                <nav>
+                    <a href="index.html">Home</a>&nbsp;&nbsp;&starf;&nbsp;&nbsp;
+                    <a href="busca.html">Buscar</a>&nbsp;&nbsp;&starf;&nbsp;&nbsp;
+                    <a href="arquivo.html">Arquivo</a>&nbsp;&nbsp;&starf;&nbsp;&nbsp;
+                    <a href="buscaesubstitui.html">Buscar e Substituir</a>&nbsp;&nbsp;&starf;&nbsp;&nbsp;
+                    <a href="cadastro.html">Cadastro</a>
+                </nav>
+                <section>
+        
+                    <form action="" name="cadastro" id="cadastro">
+                        <fieldset>
+                            <legend>Dados Pessoais: </legend>
+                            <label for="nome">Nome: </label><input type="text" name="nome" id="nome">
+                            <label for="cpf">CPF: </label><input type="text" name="cpf" id="cpf">
+                            <label for="datanasc">Data Nascimento:</label><input type="date" name="datanasc" id="datanasc">
+                        </fieldset>
+                        <fieldset>
+                            <legend>Dados do Perfil:</legend>
+                            <label for="user">Usuário: </label><input type="text" name="user" id="user">
+                            <label for="email">Email: </label><input type="email" name="email" id="email">
+                            <label for="senha">Senha: </label><input type="password" name="senha" id="senha">
+                            <label for="senhaver">Verificação Senha: </label><input type="password" name="senhaver" id="senhaver">
+                        </fieldset>
+                        <button type="button" id="btnLimpar">Limpar</button>
+                        <button type="button" id="btnCadastroSub">Submeter</button>
+                    </form>
+        
+                </section>
+            </div>
+            <div id="footer">
+                <footer>
+                    Data de início: 13/08 <br/>
+                    Desenvolvido para fins educacionais <br/>
+                    Projeto TWIST 2024.2
+                </footer>
+            </div>
+        </div>
     </div>
 </body>
 </html>
