--- a/cadastro.html
+++ b/cadastro.html
@@ -7,6 +7,7 @@
 
     <script src="scripts/cadastro.js"></script>
     <link rel="stylesheet" href="styles/stylebase.css">
+    <link rel="stylesheet" href="styles/stylecadastro.css">
 
 </head>
 <body>
@@ -18,7 +19,7 @@
                     <a href="index.html">Home</a>&nbsp;&nbsp;&starf;&nbsp;&nbsp;
                     <a href="busca.html">Buscar</a>&nbsp;&nbsp;&starf;&nbsp;&nbsp;
                     <a href="arquivo.html">Arquivo</a>&nbsp;&nbsp;&starf;&nbsp;&nbsp;
-                    <a href="buscaesubstitui.html">Buscar e Substituir</a>&nbsp;&nbsp;&starf;&nbsp;&nbsp;
+                    <a href="buscaesub.html">Buscar e Substituir</a>&nbsp;&nbsp;&starf;&nbsp;&nbsp;
                     <a href="cadastro.html">Cadastro</a>
                 </nav>
                 <section>
@@ -32,10 +33,14 @@
                         </fieldset>
                         <fieldset>
                             <legend>Dados do Perfil:</legend>
-                            <label for="user">Usuário: </label><input type="text" name="user" id="user">
-                            <label for="email">Email: </label><input type="email" name="email" id="email">
-                            <label for="senha">Senha: </label><input type="password" name="senha" id="senha">
-                            <label for="senhaver">Verificação Senha: </label><input type="password" name="senhaver" id="senhaver">
+                            <div class="cadastro_elementos">
+                                <input type="text" name="user" id="user" placeholder="Usuário">
+                                <input type="email" name="email" id="email" placeholder="Email">
+                                <div id="cadastro_senha">
+                                    <input type="password" name="senha" id="senha" placeholder="Senha">
+                                    <input type="password" name="senhaver" id="senhaver" placeholder="Verificação de Senha">
+                                </div>
+                            </div>
                         </fieldset>
                         <button type="button" id="btnLimpar">Limpar</button>
                         <button type="button" id="btnCadastroSub">Submeter</button>
