css do arquivo e da home feitos :))

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </figure>
                 </div>
             </article>
-            <article>
+            <article id="informacao">
                 <p>
                     Este primeiro projeto do programa <strong>TWIST 2024.2</strong> tem como objetivo trabalhar com formulários 
                     envolvendo o uso de <strong>expressões regulares</strong> para buscar requisições específicas em um texto. 
