--- a/buscaesub.html
+++ b/buscaesub.html
@@ -17,7 +17,7 @@
                     <a href="busca.html">Buscar</a>&nbsp;&nbsp;|&nbsp;&nbsp;
                     <a href="arquivo.html">Arquivo</a>&nbsp;&nbsp;|&nbsp;&nbsp;
                     <a href="buscaesub.html">Buscar e Substituir</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-                    <a href="">Cadastro</a>
+                    <a href="cadastro.html">Cadastro</a>
                 </nav>
                 <section>
                     
