--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="index.html">Home</a>&nbsp;&nbsp;&starf;&nbsp;&nbsp;
                 <a href="busca.html">Buscar</a>&nbsp;&nbsp;&starf;&nbsp;&nbsp;
                 <a href="arquivo.html">Arquivo</a>&nbsp;&nbsp;&starf;&nbsp;&nbsp;
-                <a href="buscaesubstitui.html">Buscar e Substituir</a>&nbsp;&nbsp;&starf;&nbsp;&nbsp;
+                <a href="buscaesub.html">Buscar e Substituir</a>&nbsp;&nbsp;&starf;&nbsp;&nbsp;
                 <a href="cadastro.html">Cadastro</a>
             </nav>
         <section>
