--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                 <a href="buscaesub.html">Buscar e Substituir</a>&nbsp;&nbsp;&starf;&nbsp;&nbsp;
                 <a href="cadastro.html">Cadastro</a>
             </nav>
-        <section>
+        
+            <section id = 'main'>
 
             <h3>Desenvolvedoras do site:</h3>
             <article id="perfis">
