--- a/arquivo.html
+++ b/arquivo.html
@@ -12,17 +12,14 @@
     <div id="pagina">
         <div id="pagina_flex">
             <div id="conteudo">
-      <nav id="navArq">
-                    <a href="index.html">Home</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-                    <a href="busca.html">Buscar</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-                    <a href="arquivo.html">Arquivo</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-                    <a href="buscaesub.html">Buscar e Substituir</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-                    <a href="cadastro.html">Cadastro</a>
-       </nav>
-                
-                <br>
-
                 <header>Projeto - Formulário e Requisitos</header>
+                <nav>
+                    <a href="index.html">Home</a>&nbsp;&nbsp;&starf;&nbsp;&nbsp;
+                    <a href="busca.html">Buscar</a>&nbsp;&nbsp;&starf;&nbsp;&nbsp;
+                    <a href="arquivo.html">Arquivo</a>&nbsp;&nbsp;&starf;&nbsp;&nbsp;
+                    <a href="buscaesub.html">Buscar e Substituir</a>&nbsp;&nbsp;&starf;&nbsp;&nbsp;
+                    <a href="cadastro.html">Cadastro</a>
+                </nav>
                 
                 <section id="mainArq">
                     <fieldset id="tipoArq">
@@ -56,7 +53,7 @@
                         <input type="file" name="arquivo" id="arquivo">
                         <br><br>
                         <button id="btnlimpa">Limpar</button>
-                        <input type="button" value="submeter" id="submete">
+                        <button id="#submete">Submeter</button>
                     </form>
 
                 </section>
