--- a/cadastro.html
+++ b/cadastro.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="styles/stylebase.css">
     <link rel="stylesheet" href="styles/stylecadastro.css">
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.11/jquery.mask.min.js"></script>
+    <script type="text/javascript">
+        $("#cpf").mask("000.000.000-00");
+    </script>
+
 </head>
 <body>
     <div id="pagina">
